--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -13,7 +13,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../../public/images/BG_A10AR-4.webp");
+  background-image: url("images/BG_A10AR-4.webp");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -26,11 +26,9 @@ body::before {
 /* 黑夜背景*/
 html.dark body::before {
   /* 使用线性渐变叠加一层色调 */
-  background-image: linear-gradient(
-      rgba(27, 27, 31, 0.6),
-      rgba(27, 27, 31, 0.6)
-    ),
-    url("../../public/images/BG_A10NR.webp");
+  background-image:
+    linear-gradient(rgba(27, 27, 31, 0.6), rgba(27, 27, 31, 0.6)),
+    url("images/BG_A10NR.webp");
   filter: blur(6px) brightness(0.7);
   background-blend-mode: overlay;
 }
